# ospf-algorithm

./: .gitignore  CMakeLists.txt  README.md  cities.csv
source/: main.cpp  main.h  router_remover.cpp  types.h
src/: dijkstra.cpp  dijkstra.h  main.cpp  main.h  parse_csv.cpp  parse_csv.h  router_remover.cpp  router_remover.h  types.h
